# wf_fissure_price

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
assets/: themes.json
cli/: Cargo.toml
cli/src/: main.rs
examples/: generate_theme_colors.rs  generate_theme_images.rs  log_watcher.rs  scale_images.rs  theme_threshold.rs
lib/: Cargo.toml
lib/src/: lib.rs  ocr.rs  theme.rs  util.rs  wfinfo.rs
overlay/: Cargo.toml
overlay/src/: lib.rs  main.rs
overlay/src/backend/: image.rs  mod.rs  wayland.rs
src/: lib.rs  main.rs  ocr.rs  theme.rs  util.rs  wfinfo.rs
