[package]
name = "wf_fissure_price"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
lazy_static = "1.5"
thiserror = "2.0"
image = "0.25"
tesseract = "0.15"
rayon = "1.11"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
palette = "0.7"
levenshtein = "1.0"
serde_json = "1.0"
serde-aux = "4.7"

# Cli
clap = { version = "4.5", features = ["derive", "color", "help"] }
anstyle = "1.0.13"

# Bin Deps
tokio = { version = "1.48", features = ["full"] }
tokio-stream = { version = "0.1", features = ["full"] }
env_logger = "0.11"
anyhow = "1.0"
shell-words = "1.1.0"
reqwest = "0.12"

femtovg = "0.19"
egl = "0.2"
gl = "0.14.0"


# Wayland Deps
ashpd = { version = "0.12", features = ["wayland"] }
wayland-protocols-wlr = { version = "0.3.9", features = ["client"] }
wayland-client = "0.31"
wayland-egl = "0.32"

# X11 Deps
x11rb = "0.13.2"
xkbcommon = "0.9.0"
#xcap = "0.7.1"

[dev-dependencies]
lib = { path = "lib" }
colored = "3.0"
anyhow = { workspace = true }
image = { workspace = true }
levenshtein = { workspace = true }
serde_json = { workspace = true }
tesseract = { workspace = true }
rayon = { workspace = true }

[features]

[workspace]
members = ["bin", "cli", "lib", "overlay"]
