[package]
name = "lib"
version = "0.1.0"
edition = "2024"

[dependencies]
# Library
lazy_static = { workspace = true }
thiserror = { workspace = true }
image = { workspace = true }
tesseract = { workspace = true }
rayon = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
palette = { workspace = true }
levenshtein = { workspace = true }
serde_json = { workspace = true }
serde-aux = { workspace = true }