[package]
name = "overlay"
version = "0.1.0"
edition = "2024"

[dependencies]
femtovg = { workspace = true }
egl = { workspace = true }
gl = { workspace = true }
image = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }

# Wayland Deps
wayland-client = { workspace = true, optional = true }
wayland-protocols-wlr = { workspace = true, optional = true, features = ["client"] }
wayland-egl = { workspace = true, optional = true }

[features]
default = ["wayland", "x11"]
wayland = ["dep:wayland-client", "dep:wayland-protocols-wlr", "dep:wayland-egl"]
x11 = []